<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_share">Share</string>
    <string name="action_show_map">Show On Map</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="package_name">com.example.android.sunshine.app</string>

    <!-- Weather specific strings -->
    <string name="weather_extra">extra.weatherdata</string>

    <!-- Settings -->
    <string name="settings_location_label">Location</string>
    <string name="settings_location_key" translatable="false">location</string>
    <string name="settings_location_default" translatable="false">80205</string>
    <string name="settings_temp_units_label">Temperature Units</string>
    <string name="settings_temp_units_key">temp_units</string>
    <string name="settings_temp_units_celsius">1</string>
    <string name="settings_temp_units_fahrenheit">2</string>

    <!-- Toast texts -->
    <string name="toast_map_app_not_installed">Please install a Maps application</string>

</resources>
