<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="General">

        <EditTextPreference
            android:title="@string/settings_location_label"
            android:key="@string/settings_location_key"
            android:defaultValue="@string/settings_location_default"
            android:inputType="text"
            android:singleLine="true"/>

        <ListPreference
            android:title="@string/settings_temp_units_label"
            android:key="@string/settings_temp_units_key"
            android:defaultValue="1"
            android:entries="@array/listTempUnits"
            android:entryValues="@array/listTempUnitsValues" />

    </PreferenceCategory>

</PreferenceScreen>